--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <div></div>
+    <img src="https://mypupcentral.com/assets/banner99.jpg" alt="">
+    <h1>Puppies!</h1>
+    <p>I love puppies because they are tiny and cute animals.</p>
+    <div></div>
+    <p>Baby dogs are adorable critters who make me smile.</p>
 </body>
 </html>
