--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <div></div>
     <img src="https://mypupcentral.com/assets/banner99.jpg" alt="">
     <h1>Puppies!</h1>
+    <h1>Most beautiful creatures</h1>
     <p>I love puppies because they are tiny and cute animals.</p>
     <div></div>
     <p>Baby dogs are adorable critters who make me smile.</p>
+    <img src="https://images7.memedroid.com/images/UPLOADED733/616e651cf3e5a.jpeg" alt="">
 </body>
 </html>
